--- a/Instructions/templates/index.html
+++ b/Instructions/templates/index.html
@@ -5,6 +5,7 @@
     <body bgcolor = 'lightblue'>
         <h1>Here are the links to the query results</h1>
         <a href="http://127.0.0.1:5000/prcp">PRCP Data Page</a></br>
-        <a href="http://127.0.0.1:5000/mosttemp">Station with most temperature data</a>
+        <a href="http://127.0.0.1:5000/mosttemp">Station with most temperature data</a></br>
+        <a href="http://127.0.0.1:5000/jsondata">Station with most temp json</a>
     </body>
 </html>
